<resources>
    <string name="app_name">Restaurant Finder</string>
    <string name="sample">This is a sample string</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>

    <string name="your_current_location">Your current location is\n%1$s</string>
    <string name="searching_state_text">Your search results will appear here</string>
    <string name="restaurant_result_average_cost">\u20B9 %1$d for two people.</string>
    <string name="search_hint">Search for any restaurants</string>
    <string name="filter">Filter results</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_cost">By cost</string>
    <string name="sort_by_rating">By rating</string>
    <string name="order">Order by</string>
    <string name="order_asc">Ascending</string>
    <string name="order_desc">Descending</string>
    <string name="apply">Apply filters</string>
    <string name="empty_favorite">No favorites yet.\nRestaurants you favorite during search will appear here.</string>
    <string name="empty_favorite_description">Image for empty favorite layout</string>
</resources>
